--- a/src/app/reports/presentation/pages/report-applicant/report-applicant.component.html
+++ b/src/app/reports/presentation/pages/report-applicant/report-applicant.component.html
@@ -110,11 +110,17 @@
   </mat-accordion>
 
   @if (isLoading()){
-  <div class="flex flex-col gap-y-1">
-    <p class="text-xl">Generando reporte....</p>
-    <mat-progress-bar mode="indeterminate" />
-  </div>
+    <div class="flex flex-col gap-y-1">
+      <p class="text-xl">Generando reporte....</p>
+      <mat-progress-bar mode="indeterminate" />
+    </div>
   } 
+
+  @if(!isLoading() && hasSearched() && datasource().length === 0){
+    <div class="text-center p-8 text-lg">
+      No se encontraron resultados para los filtros seleccionados.
+    </div>
+  }
   
   @if(!isLoading() && hasSearched() && datasource().length > 0){
     <div class="mt-8">
@@ -128,9 +134,5 @@
         (page)="onPageChange($event)"
       />
     </div>
-  } @if(!isLoading() && hasSearched() && datasource().length === 0){
-  <div class="text-center p-8 text-lg">
-    No se encontraron resultados para los filtros seleccionados.
-  </div>
-  }
+  } 
 </div>
