--- a/src/app/reports/presentation/pages/report-efficiency/report-efficiency.component.html
+++ b/src/app/reports/presentation/pages/report-efficiency/report-efficiency.component.html
@@ -1,6 +1,8 @@
-<!-- Contenedor principal -->
 <div class="p-2 sm:p-6 max-w-7xl mx-auto">
-  <form [formGroup]="filterForm">
+  <h2 class="text-2xl font-medium mb-4">
+    Reporte eficiencia de trámites
+  </h2>
+  <form [formGroup]="filterForm" (ngSubmit)="generate()">
     <div class="grid grid-cols-1 sm:grid-cols-3 gap-x-4">
       <div class="sm:col-span-2">
         <select-search
@@ -10,7 +12,7 @@
         />
       </div>
       <div>
-        <mat-form-field appearance="outline">
+        <mat-form-field>
           <mat-label>Seleccione un rango</mat-label>
           <mat-date-range-input [rangePicker]="picker" [max]="CURRENT_DATE">
             <input
@@ -61,97 +63,56 @@
         </mat-form-field>
       </div>
     </div>
+    <div class="flex justify-end">
+      <button type="submit" matButton="filled" [disabled]="isLoading() || filterForm.invalid" (click)="generate()">
+        Generar
+      </button>
+    </div>
   </form>
 
-  {{ filterForm.value | json }}
 
-  {{ results() | json }}
-
-  <!-- Botón de búsqueda -->
-  <div class="flex justify-end">
-    <button mat-flat-button color="primary" (click)="generate()">
-      Generar
-    </button>
+  @if (isLoading()){
+  <div class="flex flex-col gap-y-1">
+    <p class="text-xl">Generando reporte....</p>
+    <mat-progress-bar mode="indeterminate" />
   </div>
+  } 
 
-  <div class="overflow-x-auto">
-    <table class="min-w-full divide-y-2 divide-gray-200">
-      <thead class="ltr:text-left rtl:text-right">
-        <tr class="*:font-medium *:text-gray-900">
-          <th class="px-3 py-2 whitespace-nowrap">Name</th>
-          <th class="px-3 py-2 whitespace-nowrap">DoB</th>
-          <th class="px-3 py-2 whitespace-nowrap">Role</th>
-          <th class="px-3 py-2 whitespace-nowrap">Salary</th>
-        </tr>
-      </thead>
-
-      <tbody class="divide-y divide-gray-200">
-        <tr class="*:text-gray-900 *:first:font-medium">
-          <td class="px-3 py-2 whitespace-nowrap">Nandor the Relentless</td>
-          <td class="px-3 py-2 whitespace-nowrap">04/06/1262</td>
-          <td class="px-3 py-2 whitespace-nowrap">Vampire Warrior</td>
-          <td class="px-3 py-2 whitespace-nowrap">$0</td>
-        </tr>
-
-        <tr class="*:text-gray-900 *:first:font-medium">
-          <td class="px-3 py-2 whitespace-nowrap">Laszlo Cravensworth</td>
-          <td class="px-3 py-2 whitespace-nowrap">19/10/1678</td>
-          <td class="px-3 py-2 whitespace-nowrap">Vampire Gentleman</td>
-          <td class="px-3 py-2 whitespace-nowrap">$0</td>
-        </tr>
-
-        <tr class="*:text-gray-900 *:first:font-medium">
-          <td class="px-3 py-2 whitespace-nowrap">Nadja</td>
-          <td class="px-3 py-2 whitespace-nowrap">15/03/1593</td>
-          <td class="px-3 py-2 whitespace-nowrap">Vampire Seductress</td>
-          <td class="px-3 py-2 whitespace-nowrap">$0</td>
-        </tr>
-
-        <tr class="*:text-gray-900 *:first:font-medium">
-          <td class="px-3 py-2 whitespace-nowrap">Colin Robinson</td>
-          <td class="px-3 py-2 whitespace-nowrap">01/09/1971</td>
-          <td class="px-3 py-2 whitespace-nowrap">Energy Vampire</td>
-          <td class="px-3 py-2 whitespace-nowrap">$53,000</td>
-        </tr>
-
-        <tr class="*:text-gray-900 *:first:font-medium">
-          <td class="px-3 py-2 whitespace-nowrap">Guillermo de la Cruz</td>
-          <td class="px-3 py-2 whitespace-nowrap">18/11/1991</td>
-          <td class="px-3 py-2 whitespace-nowrap">Familiar/Vampire Hunter</td>
-          <td class="px-3 py-2 whitespace-nowrap">$0</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-
-  <!-- Tabla de resultados -->
-  <div *ngIf="resultados?.length">
-    <table mat-table [dataSource]="resultados" class="w-full mat-elevation-z2">
-      <!-- Columnas -->
-      <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef>Tipo de trámite</th>
-        <td mat-cell *matCellDef="let row">{{ row.nombre }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="cantidad">
-        <th mat-header-cell *matHeaderCellDef>Cantidad</th>
-        <td mat-cell *matCellDef="let row">{{ row.cantidad }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="promedio">
-        <th mat-header-cell *matHeaderCellDef>Promedio (días hábiles)</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.promedioDiasHabiles | number : "1.1-2" }}
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <!-- Promedio global -->
-    <div class="text-right mt-4 text-gray-700 font-semibold">
-      Promedio general:días hábiles
+  @if(!isLoading() && results().length === 0 &&  hasSearched()){
+    <div class="text-center p-8 text-lg">
+      No se encontraron resultados para los filtros seleccionados.
     </div>
-  </div>
+  }  
+
+  @if(!isLoading() && results().length > 0){
+    <div class="overflow-x-auto mt-6 overflow-y-hidden">
+      <table class="min-w-full divide-y-2 divide-gray-200">
+        <thead>
+          <tr class="*:font-medium *:text-gray-900">
+            <th class="px-3 py-2 whitespace-nowrap text-start w-full">
+              Tipo de tramite
+            </th>
+            <th class="px-3 py-2 whitespace-nowrap text-start w-auto">
+              Cantidad
+            </th>
+            <th class="px-3 py-2 whitespace-nowrap text-start w-auto">
+              Promedio
+            </th>
+          </tr>
+        </thead>
+
+        <tbody class="divide-y divide-gray-200">
+          @for (item of results(); track $index) {
+          <tr>
+            <td class="px-3 py-2 whitespace-nowrap">{{ item.typeName }}</td>
+            <td class="px-3 py-2 whitespace-nowrap">{{ item.count }}</td>
+            <td class="px-3 py-2 whitespace-nowrap">
+              {{ item.averageWorkingDays }} dias
+            </td>
+          </tr>
+          }
+        </tbody>
+      </table>
+    </div>
+  }
 </div>
