--- a/src/app/users/presentation/pages/roles-manage/roles-manage.component.html
+++ b/src/app/users/presentation/pages/roles-manage/roles-manage.component.html
@@ -1,32 +1,43 @@
-<div class="animate-fadeIn">
-  <mat-toolbar>
-    <span>Roles</span>
-    <span class="toolbar-spacer"></span>
-    <button (click)="add()" mat-icon-button matTooltip="Crear rol">
-      <mat-icon>add</mat-icon>
-    </button>
-  </mat-toolbar>
+<mat-toolbar>
+  <span>Roles</span>
+  <span class="flex-1"></span>
+  <button (click)="add()" mat-icon-button matTooltip="Crear rol">
+    <mat-icon>add</mat-icon>
+  </button>
+</mat-toolbar>
 
-  <div>
-    <table mat-table [dataSource]="datasource()" class="mat-elevation-z8">
-      <ng-container matColumnDef="rol">
-        <th mat-header-cell *matHeaderCellDef>Rol</th>
-        <td mat-cell *matCellDef="let element">
-          {{ element.name }}
-        </td>
-      </ng-container>
+<div class="p-2 sm:p-4">
+  <table mat-table [dataSource]="dataSource()">
+    <ng-container matColumnDef="rol">
+      <th mat-header-cell *matHeaderCellDef>Nombre rol</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.name }}
+      </td>
+    </ng-container>
 
-      <ng-container matColumnDef="options">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element" class="w-8">
-          <button mat-icon-button (click)="edit(element)">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
+    <ng-container matColumnDef="permissions">
+      <th mat-header-cell *matHeaderCellDef>Nro. Permisos</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.permissions.length }}
+      </td>
+    </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-  </div>
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element" class="w-8">
+        <button mat-icon-button (click)="edit(element)">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  <mat-paginator
+    [length]="dataSize()"
+    [pageSize]="limit()"
+    [pageIndex]="index()"
+    [pageSizeOptions]="[10, 20, 30, 50]"
+  />
 </div>
