--- a/src/app/administration/presentation/pages/institutions-manage/institutions-manage.component.html
+++ b/src/app/administration/presentation/pages/institutions-manage/institutions-manage.component.html
@@ -1,69 +1,68 @@
-<div class="animate-fadeIn">
-  <mat-toolbar>
-    <span>Instituciones</span>
-    <span class="toolbar-spacer"></span>
-    <button (click)="add()" mat-icon-button matTooltip="Crear institucion">
-      <mat-icon>add</mat-icon>
-    </button>
-  </mat-toolbar>
+<mat-toolbar>
+  <span>Instituciones</span>
+  <span class="flex-1"></span>
+  <button (click)="create()" mat-icon-button matTooltip="Crear institucion">
+    <mat-icon>add</mat-icon>
+  </button>
+</mat-toolbar>
 
-  <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="datasource()">
-      <ng-container matColumnDef="sigla">
-        <th mat-header-cell *matHeaderCellDef>Sigla</th>
-        <td mat-cell *matCellDef="let element" class="m-card-sub-title">
-          {{ element.sigla | uppercase }}
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="nombre">
-        <th mat-header-cell *matHeaderCellDef>Nombre</th>
-        <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="situacion">
-        <th mat-header-cell *matHeaderCellDef>Estado</th>
-        <td mat-cell *matCellDef="let element" class="w-32">
-          @if (element.activo) {
-          <span
-            class="inline-flex items-center rounded-md bg-green-100 px-2 py-1 text-xs font-medium text-green-800 ring-1 ring-inset ring-green-600/20"
-            >Activo
-          </span>
-          } @else {
-          <span
-            class="inline-flex items-center rounded-md bg-red-100 px-2 py-1 text-xs font-medium text-red-700 ring-1 ring-inset ring-red-600/10"
-          >
-            Inactivo
-          </span>
-          }
-        </td>
-      </ng-container>
-
-      <ng-container matColumnDef="buttons">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element" class="w-8">
-          <button mat-icon-button (click)="edit(element)">
-            <mat-icon>edit</mat-icon>
-          </button>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr
-        mat-row
-        [ngClass]="{ 'is-disabled': row.activo === false }"
-        *matRowDef="let row; columns: displayedColumns"
-      ></tr>
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell p-3" colspan="4">No se encontraron resultados</td>
-      </tr>
-    </table>
-    <mat-paginator
-      aria-label="Select page of users search results"
-      showFirstLastButtons
-      [length]="datasize()"
-      [pageSize]="10"
-      [pageIndex]="index()"
-      (page)="onPageChange($event)"
-    />
+<div class="p-2 sm:p-4">
+  <div class="flex justify-end mb-2">
+    <div class="w-full sm:w-1/4 h-[54px]">
+      <search-input
+        (onSearch)="search($event)"
+        placeholder="Nombre de la institucion"
+      />
+    </div>
   </div>
+  <table mat-table [dataSource]="dataSource()">
+    <ng-container matColumnDef="sigla">
+      <th mat-header-cell *matHeaderCellDef>Sigla</th>
+      <td mat-cell *matCellDef="let element" class="w-24">
+        {{ element.sigla | uppercase }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">{{ element.nombre }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="situacion">
+      <th mat-header-cell *matHeaderCellDef>Estado</th>
+      <td mat-cell *matCellDef="let element" class="w-32">
+        <span
+          class="inline-flex items-center rounded-md px-2 py-1 text-xs font-medium ring-1 ring-inset"
+          [ngClass]="
+            element.activo
+              ? 'bg-green-100 text-green-800 ring-green-600/20'
+              : 'bg-red-100 text-red-700 ring-red-600/10'
+          "
+        >
+          {{ element.activo ? "Activo" : "Inactivo" }}
+        </span>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="buttons">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element" class="w-8">
+        <button mat-icon-button (click)="update(element)">
+          <mat-icon>edit</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell p-3" colspan="4">No se encontraron resultados</td>
+    </tr>
+  </table>
+  <mat-paginator
+    showFirstLastButtons
+    [length]="dataSize()"
+    [pageSize]="limit()"
+    [pageIndex]="index()"
+    (page)="onPageChange($event)"
+  />
 </div>
