--- a/src/app/users/presentation/pages/roles-manage/roles-manage.component.html
+++ b/src/app/users/presentation/pages/roles-manage/roles-manage.component.html
@@ -1,12 +1,17 @@
 <mat-toolbar>
   <span>Roles</span>
   <span class="flex-1"></span>
-  <button (click)="add()" mat-icon-button matTooltip="Crear rol">
+  <button (click)="create()" mat-icon-button matTooltip="Crear rol">
     <mat-icon>add</mat-icon>
   </button>
 </mat-toolbar>
 
 <div class="p-2 sm:p-4">
+   <div class="flex justify-end mb-2">
+    <div class="w-full sm:w-1/4 h-[54px]">
+      <search-input (onSearch)="search($event)" placeholder="Nombre del rol"/>
+    </div>
+  </div>
   <table mat-table [dataSource]="dataSource()">
     <ng-container matColumnDef="rol">
       <th mat-header-cell *matHeaderCellDef>Nombre rol</th>
@@ -17,7 +22,7 @@
 
     <ng-container matColumnDef="permissions">
       <th mat-header-cell *matHeaderCellDef>Nro. Permisos</th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element" class="w-40">
         {{ element.permissions.length }}
       </td>
     </ng-container>
@@ -25,7 +30,7 @@
     <ng-container matColumnDef="options">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element" class="w-8">
-        <button mat-icon-button (click)="edit(element)">
+        <button mat-icon-button (click)="update(element)">
           <mat-icon>edit</mat-icon>
         </button>
       </td>
@@ -35,9 +40,10 @@
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
   <mat-paginator
+    showFirstLastButtons
     [length]="dataSize()"
     [pageSize]="limit()"
     [pageIndex]="index()"
-    [pageSizeOptions]="[10, 20, 30, 50]"
+    (page)="onPageChange($event)"
   />
 </div>
